--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>qboard</title>
-    <meta name="description" content="">
+    <meta name="description" content="the whiteboard app i wish existed">
   </head>
   <body>
     <div id="app"></div>
