add initial canvas resizing

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>qboard</title>
-    <meta name="description" content="the whiteboard app i wish existed">
+    <meta name="description" content="the whiteboard app i wish existed" />
   </head>
   <body>
-    <div id="app"></div>
+    <div class="canvas-container">
+      <canvas id="canvas" width="1600" height="900"></canvas>
+    </div>
   </body>
 </html>
