--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,13 @@
     <meta name="description" content="the whiteboard app i wish existed" />
   </head>
   <body>
-    <div class="canvas-container">
-      <canvas id="canvas" width="1600" height="900"></canvas>
+    <div class="page-container">
+      <canvas id="page" width="1600" height="900"></canvas>
+    </div>
+    <div class="pagination">
+      <button id="pagination-add">add</button>
+      <button id="pagination-prev">prev</button>
+      <button id="pagination-next">next</button>
     </div>
   </body>
 </html>
