--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,6 @@
     <div class="page-container">
       <canvas id="page" width="1600" height="900"></canvas>
     </div>
-    <div class="pagination">
-      <button id="pagination-add">add</button>
-      <button id="pagination-prev">prev</button>
-      <button id="pagination-next">next</button>
-    </div>
+    <div id="overlay"></div>
   </body>
 </html>
