refactor into single class
not sure if this is the right way to do it but whatever

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <meta name="description" content="the whiteboard app i wish existed" />
   </head>
   <body>
-    <div class="page-container">
-      <canvas id="page" width="1600" height="900"></canvas>
+    <div class="container">
+      <canvas id="QBoard" width="1600" height="900"></canvas>
     </div>
-    <div id="overlay"></div>
+    <div id="Overlay"></div>
   </body>
 </html>
