--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="container">
+      <canvas id="BaseQBoard" width="1600" height="900"></canvas>
       <canvas id="QBoard" width="1600" height="900"></canvas>
     </div>
     <div id="Overlay"></div>
