fix small things

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>qboard</title>
     <meta name="description" content="the whiteboard app i wish existed" />
-    <script src="https://kit.fontawesome.com/e6baef0f80.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/e6baef0f80.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
