--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>qboard</title>
-    <meta name="description" content="the whiteboard app i wish existed" />
+    <meta name="description" content="The whiteboard app with vim-inspired bindings." />
     <script
       src="https://kit.fontawesome.com/e6baef0f80.js"
       crossorigin="anonymous"
