Async load FontAwesome. Already have FOUP so this is not an issue and I don't want to change script order.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script
       src="https://kit.fontawesome.com/e6baef0f80.js"
       crossorigin="anonymous"
+      async
     ></script>
   </head>
   <body>
