refactor droparea control
most important reason is that we avoid touching the dom as much as possible and leave it to react; yes its more complicated but sigh

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     ></script>
   </head>
   <body>
-    <div class="container" id="DropArea">
+    <div class="container">
       <canvas id="BaseQBoard" width="1600" height="900"></canvas>
       <canvas id="QBoard" width="1600" height="900"></canvas>
     </div>
