--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       <canvas id="QBoard" width="1600" height="900"></canvas>
     </div>
     <div id="Overlay"></div>
+    <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
